--- a/BreweryCo/gradle/libs.versions.toml
+++ b/BreweryCo/gradle/libs.versions.toml
@@ -17,11 +17,12 @@ activityCompose = "1.10.1"
 composeBom = "2024.09.00"
 navigation-compose = "2.8.1"
 mockk = "1.13.9"
-retrofit = "2.9.0"
+retrofit = "2.11.0"
 hilt = "2.51.1"
 hiltNavigationCompose = "1.2.0"
 kapt = "2.0.0"
 kotlinSerializationPlugin = "2.0.0"
+loggingInterceptor = "5.0.0-alpha.16"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -41,6 +42,7 @@ junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "jun
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 #Hilt
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
